
2003-12-10	Joel Becker <joel.becker@oracle.com>

	* libosm/asmlib.c: Added manager code, and handle new
		discovery strings.
	* include/linux/asmmanager.h: Add asm_manage_path().
	* kernel/oracleasm.c: New kernel driver filesystem structure.

2003-12-10	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Use asmmanager.h.
	* include/linux/asmdisk.h: Comment tweak.
	* include/linux/asmmanager.h: Added.
	* include/linux/Makefile: Add asmmanager.h.

2003-12-10	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Create and Delete seem to work.

2003-12-08	Joel Becker <joel.becker@oracle.com>

	* documents/asm-install.txt: Newer oracleasm plans.
	* tools/asmtool.c: Started towards true ASM disks.
	* tools/list.h: list_head for asmtool.
	* vendors/common/oracleasm.init.functions: some tweaks.

2003-12-07	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Call new asmtool.

2003-12-07	Joel Becker <joel.becker@oracle.com>

	* configure.in: Bump to 0.10.0 for reworking disk labels.
	* tools/asmtool.c: Totally new asmtool code.
	* kernel/oracleasm.c: Handle new disk label structure.
	* include/linux/asmdisk.c: New disk label structure.

2003-12-04	Joel Becker <joel.becker@oracle.com>

	* vendor/{redhat,unitedlinux}/*.spec.in: %{support_ver}

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Add scan_disks().
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Add scandisks
		support.
	* vendor/common/oracleasm.sysconfig: Add boot scan variables.

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Fix no-module
		exit.

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Added disk marking.
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Add disk
		marking.

2003-11-20	Joel Becker <joel.becker@oracle.com>

	* configure.in: 0.9.1

2003-11-20	Joel Becker <joel.becker@oracle.com>
